# pygocryptfs

./: LICENSE  README.md  mytest_pygocryptfs.bat  pyproject.toml
.github/workflows/: python-publish.yml
pygocryptfs/: __init__.py  __main__.py  gcshell.py  gocryptfs.py
