[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygocryptfs"
dynamic = ["version"]
description = "Access a gocryptfs v2 vault with pure Python"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
keywords = ["gocryptfs", "python", "crypto", "encryption", "security", "privacy", "cryptography", "vault"]
authors = [
  {name = "maxpat78", email = "maxpat78@yahoo.it"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pycryptodome>=3.21"
]

[project.urls]
"Homepage" = "https://github.com/maxpat78/pygocryptfs"
"Source" = "https://github.com/maxpat78/pygocryptfs"

[project.scripts]
pygocryptfs = "pygocryptfs:main"

[tool.setuptools]
packages = ["pygocryptfs"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "pygocryptfs.__version__"}
